Add Infrastracture code and Add PreserveCompilationContext setting to .csproj

--- a/E2eTest/E2eTest.csproj
+++ b/E2eTest/E2eTest.csproj
@@ -2,6 +2,7 @@
   <PropertyGroup>
     <TargetFramework>netcoreapp2.0</TargetFramework>
     <IsPackable>false</IsPackable>
+    <PreserveCompilationContext>true</PreserveCompilationContext>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.TestHost" Version="2.0.1" />
@@ -12,4 +13,14 @@
   <ItemGroup>
     <ProjectReference Include="..\E2eTestSample\E2eTestSample.csproj" />
   </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Infrastracture\" />
+  </ItemGroup>
+  <Target Name="CopyAditionalFiles" AfterTargets="Build" Condition="'$(TargetFramework)'!=''">
+    <ItemGroup>
+      <DepsFilePaths Include="$([System.IO.Path]::ChangeExtension('%(_ResolvedProjectReferencePaths.FullPath)', '.deps.json'))" />
+    </ItemGroup>
+
+    <Copy SourceFiles="%(DepsFilePaths.FullPath)" DestinationFolder="$(OutputPath)" Condition="Exists('%(DepsFilePaths.FullPath)')" />
+  </Target>
 </Project>
